# cfem

./: CMakeLists.txt  README.md  asfem修改所需理论.docx
include/BCsSystem/: BCsSysStructured2d.h  BCsSystem.h
include/ElementSystem/: ElementSystem.h
include/ElementSystem/Element/: element.h
include/ElementSystem/Element/Element2D/: CPE4R.h  ElementPack2d.h
include/ElementSystem/Shpfun/: Shpfun2D.h  ShpfunQuad4.h
include/Init/: SystemInit.h
include/InputSystem/: DescriptionInfo.h  EnumDataType.h  InputSystem.h
include/LoadController/: LoadController.h
include/LoadSystem/: LoadSystem.h
include/MaterialSystem/: ElasticConst.h  ElmtVarInfo.h  LinearElasticMat2D.h  Material.h  Material2D.h  MaterialPack2d.h  NeoHookeanAbq2d.h
include/MathUtils/: MatrixXd.h  PetsExtension.h  Rank2Tensor.h  Rank2Tensor2d.h  Rank2Tensor3d.h  Rank4Tensor.h  Rank4Tensor3d.h  SparseMatrix.h  TensorConst2D.h  Vector.h  Vector2d.h  Vector3d.h  VectorXd.h  ViogtRank2Tensor2D.h  ViogtRank4Tensor2D.h
include/MeshSystem/: MeshSystem.h  MeshSystem2D.h  MeshType.h  NodeVarInfo.h  SetManager.h  StructuredMesh2D.h
include/PostProcessSystem/: OutputVarInfo.h  PostProcessSystem.h  PostStructured2d.h
include/SolutionSystem/: ArcLengthSolver.h  SolutionCtx.h  SolutionSystem.h
include/Utils/: MessagePrinter.h
src/: main.cpp
src/BCsSystem/: BCsSysStructured2d.cpp
src/ElementSystem/: ElementSystem.cpp
src/ElementSystem/Element/: element.cpp
src/ElementSystem/Element/Element2D/: CPE4R.cpp
src/ElementSystem/Shpfun/: ShpfunQuad4.cpp
src/Init/: SystemInit.cpp
src/InputSystem/: InputSystem.cpp
src/LoadController/: LoadController.cpp
src/MaterialSystem/: ElasticConst.cpp  ElmtVarInfo.cpp  LinearElasticMat2D.cpp  MaterialSystem.cpp  NeoHookeanAbq2d.cpp
src/MathUtils/: MatrixXd.cpp  PetsExtension.cpp  Rank2Tensor.cpp  Rank2Tensor2d.cpp  Rank2Tensor3d.cpp  Rank4Tensor.cpp  Rank4Tensor3d.cpp  SparseMatrix.cpp  TensorConst2D.cpp  Vector.cpp  Vector2d.cpp  Vector3d.cpp  VectorXd.cpp  ViogtRank2Tensor2D.cpp  ViogtRank4Tensor2D.cpp
src/MeshSystem/: MeshSystem.cpp  NodeVarInfo.cpp  SetManager.cpp  StructuredMesh2D.cpp
src/PostProcessSystem/: OutputStructured2d.cpp  OutputVarInfo.cpp  PostProcessSystem.cpp  PostStructured2d.cpp
src/SolutionSystem/: ArcLengthSolver.cpp  SolutionSystem.cpp
src/Utils/: JsonUtils.cpp  MessagePrinter.cpp
tests/: plane_strain.json
tests/MathUtils2d/: CMakeLists.txt  test.cpp
